Fix alignment of items when tabs wrap

--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -2046,7 +2046,7 @@ td {
     padding: 0; }
     .tabs--primary li a {
       background-color: transparent;
-      border: none;
+      border-bottom: 4px solid transparent;
       float: left;
       font-weight: bold;
       margin: 0;
