--- a/sass/components/_tabs.scss
+++ b/sass/components/_tabs.scss
@@ -25,7 +25,7 @@
 
 		a {
 			background-color: transparent;
-			border: none;
+			border-bottom: 4px solid transparent;
 			float: left;
 			font-weight: bold;
 			margin: 0;
